<resources>
    <string name="app_name">Rest reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="close">Close</string>
    <string name="menu_help">About</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="reminder_off_title">Press timer to start work</string>
    <string name="eula_accept">I accept</string>
    <string name="eula_reject">No thanks</string>
    <string name="intro_title">Hello!</string>
    <string name="intro_description">You have opened Rest reminder - an app, that reminds users to take frequent breaks between work.</string>
    <string name="intro_give_it_a_go">You can start using the app right away with factory settings (work - 45 min, rest - 15 min).</string>
    <string name="intro_go_to_settings">You can personalize the app for your needs in Settings</string>
    <string name="intro_go_to_manual">(Full feature description and instructions can be found in a user guide)</string>
    <string name="to_preferences">Settings</string>
    <string name="start_work">Start work</string>
    <string name="counter_on">Rest reminder is on</string>
    <string name="notification_sample_text">Sample text for period end notification</string>
    <string name="close_notification">Close</string>
    <string name="on_work_period">Work Period</string>
    <string name="on_rest_period">Rest Period</string>
    <string name="description_extended">extended %1$d times</string>
    <string name="description_extended_one_time">extended</string>
    <string name="extend_current_period">extend period</string>
    <string name="extend_period_one_option">extend for %1$d min</string>
    <string name="toast_period_end_forced">The current period was forced to end</string>
    <string name="toast_period_end_extended">The current period end is extended</string>
    <string name="toast_period_end_extended_previous">The previous period has been extended</string>
    <string name="hint_dialog_text">i</string>
    <string name="swipe_area_text">swipe to %1$s</string>
    <string name="swipe_area_text_land">s\nw\ni\np\ne\n\nt\no\n\n%1$s</string>
    <string name="swipe_area_text_land_work">w\no\nr\nk</string>
    <string name="swipe_area_text_land_rest">r\ne\ns\nt</string>
    <string name="release_text">Release to end current period</string>
    <string name="timer_layout_colon_string">:</string>
    <string name="timer_layout_point_string">.</string>
    <string name="turning_off_text">Turning off&#8230;</string>
    <string name="swipe_area_work">work</string>
    <string name="swipe_area_rest">rest</string>
    <string name="notify_work_period_end_ticker_message">Time to rest!</string>
    <string name="notify_work_period_end_message_part_one">The work period</string>
    <string name="notify_period_end_message_extend">(extend count: %1$d)\u0020</string>
    <string name="notify_work_period_end_message_part_two">has ended</string>
    <string name="notify_rest_period_end_ticker_message">Back to work!</string>
    <string name="notify_rest_period_end_message_part_one">The rest period</string>
    <string name="notify_rest_period_end_message_part_two">has ended</string>
    <string name="notify_turn_off">Turn off</string>
    <string name="notify_extend">Extend</string>
    <string name="notify_reminder_is_on_title">Rest reminder is on</string>
    <string name="notify_reminder_is_on_work_message">Current period: work</string>
    <string name="notify_reminder_is_on_rest_message">Current period: rest</string>
    <string name="work">work</string>
    <string name="rest">rest</string>
    <string name="notification_work_end_title">Time to relax</string>
    <string name="notification_rest_end_title">Back to work</string>
    <string name="notification_toast_period_extended">The last period is extended</string>
    <string name="notification_end_extend_description_once">The previous %1$s period was extended</string>
    <string name="notification_end_extend_description_multiple">The previous %1$s period was extended %2$d times</string>
    <string name="notification_end_manual_title">Press \"Start next period\" to start %1$s period</string>
    <string name="next_period_end_description">The next period (%1$s) will end at %2$s</string>
    <string name="start_next_period">Start next period</string>
    <string name="extend_dialog_title">Extend period</string>
    <string name="extend_dialog_close_dialog_text">Cancel</string>
    <string name="extend_dialog_button">Extend for %1$d minutes</string>
    <string name="showcase_start_title">Starting the reminder</string>
    <string name="showcase_start_description">Press the timer button to start reminder. \n (To turn off reminder, press and hold timer button)</string>
    <string name="showcase_extend_title">Extending current period</string>
    <string name="showcase_extend_description">To extend current period, choose from one or many extend options</string>
    <string name="showcase_stop_title">Turning off the reminder</string>
    <string name="showcase_stop_description">Press and hold timer button to turn off reminder</string>
    <string name="showcase_force_end_title">Forcing current period to end</string>
    <string name="showcase_force_end_description">To end current period before its intended end time and start next period, swipe this area</string>
    <string name="showcase_menu_title">Settings and User manual</string>
    <string name="showcase_menu_description">Adapt the app for your needs by changing settings. Also a detailed user manual is available.</string>
    <string name="showcase_close">Close</string>
    <string name="showcase_next">Next</string>
    <string name="pref_mode_title">Reminder mode</string>
    <string name="pref_mode_title_first_part">Reminder mode: %1$s</string>
    <string name="pref_mode_title_manual">manual</string>
    <string name="pref_mode_title_automatic">automatic</string>
    <string name="pref_mode_summary_automatic">Following periods start automatically</string>
    <string name="pref_mode_summary_manual">Periods are started after user confirmation</string>
    <string name="pref_mode_key">reminder_mode</string>
    <string name="pref_category_basic_settings_key">basic_settings_category</string>
    <string name="pref_category_basic_settings_title">General settings</string>
    <string name="pref_screen_periods_key">screen_period_length</string>
    <string name="pref_screen_periods_title">Work and rest period settings</string>
    <string name="pref_work_period_length_key">work_period_length</string>
    <string name="pref_work_period_length_title">Work period duration</string>
    <string name="pref_work_period_length_dialog_text">Set period duration in hours and minutes</string>
    <string name="pref_rest_period_length_key">rest_period_length</string>
    <string name="pref_rest_period_length_title">Rest period duration</string>
    <string name="pref_rest_period_length_dialog_text">Set period duration in hours and minutes</string>
    <string name="pref_work_period_start_sound_key">work_period_start_sound</string>
    <string name="pref_work_period_start_sound_title">Work period start sound</string>
    <string name="pref_rest_period_start_sound_key">rest_period_start_sound</string>
    <string name="pref_rest_period_start_sound_title">Rest period start sound</string>
    <string name="pref_category_features_key">features_category</string>
    <string name="pref_category_features_title">Feature settings</string>
    <string name="pref_approx_time_sound_key">approx_time_sound</string>
    <string name="pref_approx_time_sound_title">Proximity alarm sound</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="pref_end_period_key">enable_end_period</string>
    <string name="pref_end_period_title">End current period</string>
    <string name="pref_end_period_summary">Force current period to end</string>
    <string name="pref_enable_approx_notification_key">enable_approx_notification_key</string>
    <string name="pref_enable_approx_notification_title">Proximity alarm</string>
    <string name="pref_enable_approx_notification_summary">Sound alarm notifies about the upcoming period end</string>
    <string name="pref_approx_notification_length_key">approx_notification_length_key</string>
    <string name="pref_approx_notification_length_title">Time before period end</string>
    <string name="pref_approx_notification_length_summary">Current value:</string>
    <string name="pref_approx_notification_length_dialog_text">Set the amount of time in minutes and seconds</string>
    <string name="pref_enable_vibrate_key">enable_end_vibrate</string>
    <string name="pref_enable_vibrate_title">Enable vibration</string>
    <string name="pref_screen_period_extend_key">pref_screen_period_extend_key</string>
    <string name="pref_screen_period_extend_title">Extend period settings</string>
    <string name="pref_enable_extend_key">enable_end_extend</string>
    <string name="pref_enable_extend_summary">Extend current period</string>
    <string name="pref_enable_extend_title">Extend period</string>
    <string name="pref_period_extend_length_key">end_extend_length_key</string>
    <string name="pref_period_extend_length_title">Extension base length</string>
    <string name="pref_period_extend_length_summary">Set the period end extend duration in minutes</string>
    <string name="pref_period_extend_length_dialog_text">Set the extend in minutes (1&#8211;120)</string>
    <string name="pref_period_extend_options_key">end_extend_options_key</string>
    <string name="pref_period_extend_options_title">Amount of extending options</string>
    <string name="pref_period_extend_options_dialog_text">Choose the amount of extend options</string>
    <string name="pref_screen_approx_settings_key">pref_screen_approx_settings</string>
    <string name="pref_screen_approx_settings_title">Proximity alarm settings</string>
    <string name="pref_show_is_on_icon_key">pref_show_is_on_icon</string>
    <string name="pref_show_is_on_icon_title">Show icon on a status bar</string>
    <string name="pref_show_stop_counter_hint_key">pref_show_stop_counter_hint</string>
    <string name="pref_show_stop_counter_hint_title">Show stop counter hint</string>
    <string name="pref_show_led_key">pref_show_led_hint</string>
    <string name="pref_show_led_title">Enable LED indicator</string>
    <string name="pref_hour_single">1 hour</string>
    <string name="pref_hour_multiple">%1$d hours</string>
    <string name="pref_minute_single">1 minute</string>
    <string name="pref_minute_multiple">%1$d minutes</string>
    <string name="pref_second_single">1 second</string>
    <string name="pref_second_multiple">%1$d seconds</string>
    <string name="pref_summary_and">and</string>
    <string name="pref_options_single">1 option</string>
    <string name="pref_options_multiple">%1$d options</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_fragment_tag">preference_fragment</string>
    <string name="back_to_top">^</string>
    <string name="manual_activity_title">About</string>
    <string name="default_work_length_string">00:45</string>
    <string name="default_rest_length_string">00:15</string>
    <string name="default_approx_length_string">00:30</string>
    <string name="time_preference_set_text">Set</string>
    <string name="time_preference_cancel_text">Cancel</string>
    <string name="title_activity_manual">About</string>
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
</resources>