<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jf="http://schemas.android.com/apk/res-auto" >
    <PreferenceCategory
        android:key="@string/pref_category_basic_settings_key"
        android:title="@string/pref_category_basic_settings_title">
		<ListPreference 
           android:title="@string/pref_mode_title"
           android:key="@string/pref_mode_key"
           android:entries="@array/workdaySchedulerMode"
           android:entryValues="@array/workdaySchedulerModeValues"
           android:defaultValue="0" />  
           
		<PreferenceScreen
	       android:key="@string/pref_screen_periods_key"
	       android:title="@string/pref_screen_periods_title"
	       android:persistent="false" >
		
			       <com.colormindapps.rest_reminder_alarm.CustomTimePreference
	           android:key="@string/pref_work_period_length_key"
	           android:title="@string/pref_work_period_length_title"
	           android:defaultValue="@string/default_work_length_string"
	           jf:customTimeDialogTopText="@string/pref_work_period_length_dialog_text"
	           jf:firstMinValue="0"
		       jf:firstMaxValue="47" />
		      
	        <RingtonePreference
	           android:key="@string/pref_work_period_start_sound_key"
	           android:title="@string/pref_work_period_start_sound_title"
	           android:ringtoneType="notification" 
	           android:defaultValue="content://settings/system/notification_sound"/>
	        
	       <com.colormindapps.rest_reminder_alarm.CustomTimePreference
	           android:key="@string/pref_rest_period_length_key"
	           android:title="@string/pref_rest_period_length_title"
	           android:defaultValue="@string/default_rest_length_string"
	           jf:firstMinValue="0"
		       jf:firstMaxValue="47"
	           jf:customTimeDialogTopText="@string/pref_rest_period_length_dialog_text" />
	      
	       <RingtonePreference
	           android:key="@string/pref_rest_period_start_sound_key"
	           android:title="@string/pref_rest_period_start_sound_title"
	           android:ringtoneType="notification"
	           android:defaultValue="content://settings/system/notification_sound" />

   			</PreferenceScreen>
   			
		   <CheckBoxPreference
	           android:key="@string/pref_enable_vibrate_key"
	           android:title="@string/pref_enable_vibrate_title"
	           android:defaultValue="true" />
	       <CheckBoxPreference
	           android:key="@string/pref_show_is_on_icon_key"
	           android:title="@string/pref_show_is_on_icon_title"
	           android:defaultValue="true" />
	    	<CheckBoxPreference
	           android:key="@string/pref_show_led_key"
	           android:title="@string/pref_show_led_title"
	           android:defaultValue="true" />
		<CheckBoxPreference
			android:key="@string/pref_colorize_notifications_key"
			android:title="@string/pref_colorize_notifications_title"
			android:defaultValue="true" />
   		</PreferenceCategory>

        <PreferenceCategory
      	 android:key="@string/pref_category_features_key"
      	 android:title="@string/pref_category_features_title">

	       <SwitchPreference
	           android:key="@string/pref_end_period_key"
	           android:summary="@string/pref_end_period_summary"
	           android:title="@string/pref_end_period_title"
	           android:defaultValue="true" />
	       <SwitchPreference
	           android:key="@string/pref_enable_extend_key"
	           android:summary="@string/pref_enable_extend_summary"
	           android:title="@string/pref_enable_extend_title"
	           android:defaultValue="true" />
	       <PreferenceScreen
		       android:key="@string/pref_screen_period_extend_key"
		       android:title="@string/pref_screen_period_extend_title"
		       android:persistent="false"
		       android:dependency="@string/pref_enable_extend_key">
		       
	           
		       <com.colormindapps.rest_reminder_alarm.NumberPreference
		           android:key="@string/pref_period_extend_options_key"
		           android:title="@string/pref_period_extend_options_title"
		           android:dialogMessage="@string/pref_period_extend_options_dialog_text"
		           android:defaultValue="1"
		           android:dependency="@string/pref_enable_extend_key"
		           jf:numberDialogTopText="@string/pref_period_extend_options_dialog_text"
		           jf:numberMinValue="1"
		           jf:numberMaxValue="3" />
		       <com.colormindapps.rest_reminder_alarm.NumberPreference
		           android:key="@string/pref_period_extend_length_key"
		           android:title="@string/pref_period_extend_length_title"
		           android:summary="@string/pref_period_extend_length_summary"
		           android:defaultValue="5"
		           android:dependency="@string/pref_enable_extend_key"
		           android:dialogMessage="@string/pref_period_extend_length_dialog_text"
		           jf:numberDialogTopText="@string/pref_period_extend_length_dialog_text"
		           jf:numberMinValue="1"
		           jf:numberMaxValue="120" />
		           
	   </PreferenceScreen>
       </PreferenceCategory>

</PreferenceScreen>