<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start"
tools:context="com.colormindapps.rest_reminder_alarm.MainActivity">

<androidx.coordinatorlayout.widget.CoordinatorLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#00FFFFFF"
		android:theme="@style/AppTheme.AppBarOverlay">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/toolbar">

		</androidx.appcompat.widget.Toolbar>


	</com.google.android.material.appbar.AppBarLayout>
	<RelativeLayout

		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">


		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:src="@drawable/transparent_layer"
			android:id="@+id/transparentImageView"
			android:layout_below="@id/toolbar"
			tools:ignore="ContentDescription" />

		<ImageView
			android:id="@+id/shadow"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:background="@drawable/shadow_layer_portrait"
			android:layout_below="@id/toolbar"
			/>



		<Button
			android:id="@+id/info_button"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="15dp"
			android:onClick="showHintDialog"
			android:layout_below="@id/toolbar"
			android:text="@string/hint_dialog_text"
			style="@style/InfoButton"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/timer_layout"
			android:layout_below="@id/info_button"
			android:gravity="center"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/period_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center"
				style="@style/TitleFont" />

			<TextView
				android:id="@+id/description_text"
				style="@style/NormalFont"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/description_text_marginTop"
				android:gravity="center_vertical|center" />
		</LinearLayout>



		<RelativeLayout
			android:id="@+id/timer_layout"
			android:layout_width="@dimen/timer_layout_width"
			android:layout_height="@dimen/timer_layout_height"
			android:layout_centerInParent="true"
			android:gravity="center"
			android:layout_marginLeft="@dimen/timer_layout_marginLeft"
			android:layout_marginRight="@dimen/timer_layout_marginRight"
			android:background="@drawable/btn_timer_np"
			android:clickable="true"
			android:focusable="true">

			<TextView
				android:id="@+id/timer_hour1"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />

			<TextView
				android:id="@+id/timer_hour2"
				style="@style/TimerFont"
				android:layout_width="@dimen/timer_digit_width"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_hour1" />

			<TextView
				android:id="@+id/timer_colon"
				style="@style/TimerFont"
				android:layout_width="@dimen/timer_sepparator_width"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_sepparator_colon_marginTop"
				android:layout_toRightOf="@id/timer_hour2"
				android:text="@string/timer_layout_colon_string"/>

			<TextView
				android:id="@+id/timer_minute1"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_colon"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />
			<TextView
				android:id="@+id/timer_minute2"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_minute1"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />

			<TextView
				android:id="@+id/timer_point"
				style="@style/TimerFont"
				android:layout_width="@dimen/timer_sepparator_width"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_sepparator_point_marginTop"
				android:layout_toRightOf="@id/timer_minute2"
				android:text="@string/timer_layout_point_string" />

			<TextView
				android:id="@+id/timer_second1"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_point"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />
			<TextView
				android:id="@+id/timer_second2"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/timer_digit_marginTop"
				android:layout_toRightOf="@id/timer_second1"
				android:layout_width="@dimen/timer_digit_width"
				style="@style/TimerFont" />

		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/timer_layout"
			android:orientation="vertical" >

			<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:gravity="center"
				android:layout_weight="1">

				<Button
					android:id="@+id/button_period_end_extend"
					style="@style/ExtendButton"
					android:layout_width="@dimen/button_period_end_extend_width"
					android:layout_height="@dimen/button_period_end_extend_height"
					android:layout_gravity="center"
					android:stateListAnimator="@null"
					android:background="@drawable/btn_extend_np"
					android:onClick="showExtendDialog"
					android:text="@string/extend_current_period" />

				<Button
					android:id="@+id/button_last_session"
					style="@style/ExtendButton"
					android:layout_width="@dimen/button_period_end_extend_width"
					android:layout_height="@dimen/button_period_end_extend_height"
					android:layout_gravity="center"
					android:stateListAnimator="@null"
					android:visibility="gone"
					android:background="@drawable/btn_extend_np"
					android:onClick="openLastSession"
					android:text="@string/last_session" />


				<Button
					android:id="@+id/button_end_period"
					style="@style/ExtendButton"
					android:layout_width="@dimen/button_multiple_width"
					android:layout_height="@dimen/button_period_end_extend_height"
					android:layout_toRightOf="@id/button_period_end_extend"
					android:layout_gravity="right"
					android:stateListAnimator="@null"
					android:background="@drawable/btn_extend_np"
					android:onClick="endPeriod" />

			</RelativeLayout>


			<TextView
				android:id="@+id/swipe_area_text"
				android:layout_width="match_parent"
				android:layout_height="@dimen/swipe_area_text_height"
				android:layout_gravity="center"
				android:background="@drawable/swipe_idle"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center_vertical|center"
				android:text="@string/swipe_area_text"
				android:textColor="@color/white"
				android:textSize="@dimen/swipe_area_text_text_size" />
		</LinearLayout>




	</RelativeLayout>


	<!-- Screen content -->
	<!-- Use app:layout_behavior="@string/appbar_scrolling_view_behavior" to fit below top app bar -->

</androidx.coordinatorlayout.widget.CoordinatorLayout>

<com.google.android.material.navigation.NavigationView
	android:id="@+id/nav_view"
	android:layout_width="wrap_content"
	android:layout_height="match_parent"
	android:layout_gravity="start"
	android:fitsSystemWindows="true"
	app:headerLayout="@layout/nav_header_main"
	app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>